--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@ body {
     color: #a5a5a5;
     letter-spacing: 1px;
 }
-    </style>
+ .desk p {
+    font-size: 15px;
+}
+  </style>
 
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
