--- a/index.html
+++ b/index.html
@@ -474,6 +474,71 @@ body {
             </div>
           </div>
         </div>
+            
+    <div class="row">
+
+          <div class="col-md-4 col-sm-4">
+            <div class="team-member">
+              <div class="team-img">
+                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/21617596_158022734783682_6999140066519161637_n.jpg?_nc_cat=101&_nc_ht=scontent-lhr3-1.xx&oh=a461f07379966d452c13e75cd235ce0f&oe=5C7EBE82" alt="team member" class="img-responsive">
+              </div>
+              <div class="team-hover">
+                <div class="desk">
+                  <h4>Hi There !</h4>
+                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                </div>
+                <div class="s-link">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-google-plus"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="team-title">
+              <h5>Alex Parkins</h5>
+              <span>Photographer</span>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <div class="team-member">
+              <div class="team-img">
+                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-1/21731597_10150009420698562_9065937724788420418_o.png?_nc_cat=1&_nc_ht=scontent-lhr3-1.xx&oh=7cf53251d4ed42673d0ac2c88d28e173&oe=5C6FC19D" alt="team member" class="img-responsive">
+              </div>
+              <div class="team-hover">
+                <div class="desk">
+                  <h4>Hello World</h4>
+                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                </div>
+                <div class="s-link">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-google-plus"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="team-title">
+              <h5>James Vernon</h5>
+              <span>Head of Online</span>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <div class="team-member">
+              <div class="team-img">
+                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-1/30420222_10150025585994535_1220887860103079987_o.png?_nc_cat=1&_nc_ht=scontent-lhr3-1.xx&oh=0490766bd531ca70802dd13b5321f2dc&oe=5C6C9A7F" alt="team member" class="img-responsive">
+              </div>
+              <div class="team-hover">
+                <div class="desk">
+                  <h4>I love to design</h4>
+                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="team-title">
+              <h5>Claire Lee</h5>
+              <span>Freelancer</span>
+            </div>
+          </div>
+        </div>
       </div>
         </body>
         </html>
