--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body {
     <div class="row">
       <div class="heading-title text-center">
         <h3 class="text-uppercase">Meet The Online Team </h3>
-        <p class="p-top-30 half-txt">The online team look maintain and manage the DFS website </p>
+        <p class="p-top-30 half-txt">The online team maintain and manage the DFS website - Hover over our pictures to find out what each of us do! </p>
       </div>
 
       <div class="col-md-4 col-sm-4">
@@ -160,8 +160,13 @@ body {
           </div>
           <div class="team-hover">
             <div class="desk">
-              <h4>Hi There !</h4>
-              <p>I love to introduce myself as a Web Coding Genius!</p>
+              <h4> Here's what I do - </h4>
+              <p> - Web Coding Genius</p>
+              <p> - Issues with countdown display</p>
+              <p> - Amplience Dynamic Content</p>
+              <p> - Qubit Opentag</p>
+              <p> - Contact Us Page Functionality</p>
+              <p> - Content Page Amends</p>
             </div>
             <div class="s-link">
               <a href="#"><i class="fa fa-facebook"></i></a>
