--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ body {
           </div>
           <div class="team-hover">
             <div class="desk">
-              <h4>Hello World</h4>
-              <p>I love to introduce myself as a hardcore Web Designer.</p>
+              <h4> Here's what I do - </h4>
+              <p></p>
             </div>
             <div class="s-link">
               <a href="#"><i class="fa fa-facebook"></i></a>
@@ -209,8 +209,8 @@ body {
           </div>
           <div class="team-hover">
             <div class="desk">
-              <h4>I love to design</h4>
-              <p>I love to introduce myself as a hardcore Web Designer.</p>
+              <h4> Here's what I do - </h4>
+              <p></p>
             </div>
           </div>
         </div>
@@ -230,8 +230,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>Hi There !</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -252,8 +252,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>Hello World</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -274,8 +274,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>I love to design</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
             </div>
           </div>
@@ -294,8 +294,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>Hi There !</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -316,8 +316,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>Hello World</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -338,8 +338,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>I love to design</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
             </div>
           </div>
@@ -359,8 +359,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>Hi There !</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -381,8 +381,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>Hello World</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -403,8 +403,8 @@ body {
             </div>
             <div class="team-hover">
               <div class="desk">
-                <h4>I love to design</h4>
-                <p>I love to introduce myself as a hardcore Web Designer.</p>
+                <h4> Here's what I do - </h4>
+                <p></p>
               </div>
             </div>
           </div>
@@ -424,8 +424,8 @@ body {
               </div>
               <div class="team-hover">
                 <div class="desk">
-                  <h4>Hi There !</h4>
-                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                  <h4> Here's what I do - </h4>
+                  <p></p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -446,8 +446,8 @@ body {
               </div>
               <div class="team-hover">
                 <div class="desk">
-                  <h4>Hello World</h4>
-                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                  <h4> Here's what I do - </h4>
+                  <p></p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -468,8 +468,8 @@ body {
               </div>
               <div class="team-hover">
                 <div class="desk">
-                  <h4>I love to design</h4>
-                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                  <h4> Here's what I do - </h4>
+                  <p></p>
                 </div>
               </div>
             </div>
@@ -489,8 +489,8 @@ body {
               </div>
               <div class="team-hover">
                 <div class="desk">
-                  <h4>Hi There !</h4>
-                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                  <h4> Here's what I do - </h4>
+                  <p></p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -511,8 +511,8 @@ body {
               </div>
               <div class="team-hover">
                 <div class="desk">
-                  <h4>Hello World</h4>
-                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                  <h4> Here's what I do - </h4>
+                  <p></p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -533,8 +533,8 @@ body {
               </div>
               <div class="team-hover">
                 <div class="desk">
-                  <h4>I love to design</h4>
-                  <p>I love to introduce myself as a hardcore Web Designer.</p>
+                  <h4> Here's what I do - </h4>
+                  <p></p>
                 </div>
               </div>
             </div>
