--- a/index.html
+++ b/index.html
@@ -188,7 +188,13 @@ body {
           <div class="team-hover">
             <div class="desk">
               <h4> Here's what I do - </h4>
-              <p></p>
+              <p>Homepage carousel changes </p>
+              <p>Espot creation</p>
+              <p>Card list amends - image changes</p>
+              <p>Campaign assets</p>
+              <p>International content - design changes</p>
+              <p>Exclusive brand carousel</p>
+              <p>Store locator images</p>
             </div>
             <div class="s-link">
               <a href="#"><i class="fa fa-facebook"></i></a>
@@ -275,7 +281,9 @@ body {
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                <p>International product and site content</p>
+                <p>www.dfs-banken.nl</p>
+                <p>www.dfsspain.com</p>
               </div>
             </div>
           </div>
@@ -360,7 +368,12 @@ body {
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                <p>Homepage carousel changes </p>
+                <p>Content articles </p>
+                <p>Buying guides</p>
+                <p>Espot creation</p>
+                <p>Exclusive brands content</p>
+                <p>Campaign assets - Countdowns</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -370,7 +383,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Linzi Jenkins</h5>
+            <h5>Linzi Jenkins - 01302 573991</h5>
             <span>Online Studio Manager</span>
           </div>
         </div>
@@ -382,7 +395,12 @@ body {
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                <p>Content updates to FAQ's</p>
+                <p>Report any issues with the Contact Us page</p>
+                <p>DFS Gallery (Olapic)</p>
+                <p>Store Locator/Directory updates</p>
+                <p>Promotional vouchers available on the website</p>
+                <p>Pricing errors on inspirational content</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -392,7 +410,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Nicola Winder</h5>
+            <h5>Nicola Winder - 01305 573328</h5>
             <span>Online Content Manager</span>
           </div>
         </div>
@@ -404,12 +422,13 @@ body {
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                <p>Render process</p>
+                <p>Any website image issues</p>
               </div>
             </div>
           </div>
           <div class="team-title">
-            <h5>Erica Calladine</h5>
+            <h5>Erica Calladine -  01302 332922</h5>
             <span>Studio Manager</span>
           </div>
         </div>
@@ -447,7 +466,12 @@ body {
               <div class="team-hover">
                 <div class="desk">
                   <h4> Here's what I do - </h4>
-                  <p></p>
+                  <p>Photography cut-outs, quality control</p>
+                  <p>Colour issues of product</p>
+                  <p>Amplience uploading of images </p>
+                  <p>Line drawings </p>
+                  <p>Campaign photography schedule</p>
+                  <p>Removal of images from the site</p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -457,7 +481,7 @@ body {
               </div>
             </div>
             <div class="team-title">
-              <h5>Ella Davies</h5>
+              <h5>Ella Davies - 01302 573323</h5>
               <span>Online Artworker</span>
             </div>
           </div>
@@ -469,12 +493,14 @@ body {
               <div class="team-hover">
                 <div class="desk">
                   <h4> Here's what I do - </h4>
-                  <p></p>
+                  <p>Photography cut-outs</p>
+                  <p>Scanning of all fabrics/leathers for swatches</p>
+                  <p>Colour correction</p>
                 </div>
               </div>
             </div>
             <div class="team-title">
-              <h5>Tom Mullins</h5>
+              <h5>Tom Mullins - 01302 332959 </h5>
               <span>Studio Artworker</span>
             </div>
           </div>
@@ -490,7 +516,10 @@ body {
               <div class="team-hover">
                 <div class="desk">
                   <h4> Here's what I do - </h4>
-                  <p></p>
+                  <p>Photography</p>
+                  <p>Dropins</p>
+                  <p>Sign off photography</p>
+                  <p>Portrait images of Managers</p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -500,7 +529,7 @@ body {
               </div>
             </div>
             <div class="team-title">
-              <h5>Alex Parkins</h5>
+              <h5>Alex Parkins - 01302 334453</h5>
               <span>Photographer</span>
             </div>
           </div>
@@ -534,7 +563,10 @@ body {
               <div class="team-hover">
                 <div class="desk">
                   <h4> Here's what I do - </h4>
-                  <p></p>
+                  <p>Photography cut-outs</p>
+                  <p>Colour checking of all product images</p>
+                  <p>Retouching of lifestyle images</p>
+                  <p>Drop ins</p>
                 </div>
               </div>
             </div>
