--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body {
           </div>
         </div>
         <div class="team-title">
-          <h5>Manisha Parmar</h5>
+          <h5>Manisha Parmar - 01302 573218</h5>
           <span>Senior Designer</span>
         </div>
       </div>
