--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@ body {
               <div class="desk">
                 <h4> Here's what I do - </h4>
                 <p>Content updates to FAQ's</p>
-                <p>Report any issues with the Contact Us page</p>
+                <p>Issues with the Contact Us page</p>
                 <p>DFS Gallery (Olapic)</p>
                 <p>Store Locator/Directory updates</p>
-                <p>Promotional vouchers available on the website</p>
+                <p>Promotional vouchers on web</p>
                 <p>Pricing errors on inspirational content</p>
               </div>
               <div class="s-link">
