--- a/index.html
+++ b/index.html
@@ -292,8 +292,9 @@ body {
             <span>Web Ops Manager</span>
           </div>
         </div>
+      </div>
         
-      <div class="row">
+       <div class="row">
 
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
