--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ body {
           </div>
         </div>
         <div class="team-title">
-          <h5>Paul Brown</h5>
+          <h5>Paul Brown - 01302 573758</h5>
           <span>Front End Web Developer</span>
         </div>
       </div>
@@ -216,13 +216,18 @@ body {
           <div class="team-hover">
             <div class="desk">
               <h4> Here's what I do - </h4>
-              <p></p>
+              <p>Maintain & Improve the Website</p>
+              <p>Tech upgrades & Implementation</p>
+              <p>Technical Investigation</p>
+              <p>Web Coding</p>
+              <p>Incident Investigation</p>
+              <p>Lead in Digital Projects</p>
             </div>
           </div>
         </div>
         <div class="team-title">
-          <h5>Simon Donovan</h5>
-          <span>Web Ops Manager</span>
+          <h5>Alex Proven - 01302 573790</h5>
+          <span>Web Ops Executive</span>
         </div>
       </div>
     </div>
@@ -247,7 +252,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Wayne Machan</h5>
+            <h5>Wayne Machan - 01302 572977</h5>
             <span>Web Ops Support</span>
           </div>
         </div>
@@ -266,7 +271,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Louise Inskip</h5>
+            <h5>Louise Inskip - 01302 572980</h5>
             <span>International Web Coordinator</span>
           </div>
         </div>
@@ -288,8 +293,8 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Jas Lall</h5>
-            <span>Web Ops Manager</span>
+            <h5>Jas Lall - 01302 572958</h5>
+            <span>Online Analyst</span>
           </div>
         </div>
       </div>
@@ -314,7 +319,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Heather Armstrong</h5>
+            <h5>Heather Armstrong - 01302 332958</h5>
             <span>Web Content Co-ordinator</span>
           </div>
         </div>
@@ -343,18 +348,21 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/37914041_114240169507063_5058934539351490560_o.jpg?_nc_cat=100&_nc_ht=scontent-lhr3-1.xx&oh=99c7cd3718db0522be97ad5ed67f8657&oe=5CAB8402" alt="team member" class="img-responsive">
+              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18485741_113211019257408_8151797575601998625_n.jpg?_nc_cat=102&_nc_ht=scontent-lhr3-1.xx&oh=ae9c9d9440e1a009e0f1ae33c9a854af&oe=5C805995" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+              <p>Maintain & Improve the Website</p>
+              <p>Tech upgrades & Implementation</p>
+              <p>Lead in Digital Projects</p>
+              <p>Lead in Online Busines Ops</p>
               </div>
             </div>
           </div>
           <div class="team-title">
-            <h5>Alex Proven</h5>
-            <span>Web Ops Executive</span>
+            <h5>Simon Donovan - 01302 573398</h5>
+            <span>Web Ops Manager</span>
           </div>
         </div>
       </div>
