--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@ body {
           <div class="team-hover">
             <div class="desk">
               <h4> Here's what I do - </h4>
-              <p> - Web Coding Genius</p>
-              <p> - Issues with countdown display</p>
-              <p> - Amplience Dynamic Content</p>
-              <p> - Qubit Opentag</p>
-              <p> - Contact Us Page Functionality</p>
-              <p> - Content Page Amends</p>
+              <p> Web Coding Genius</p>
+              <p> Issues with countdown display</p>
+              <p> Amplience Dynamic Content</p>
+              <p> Qubit Opentag</p>
+              <p> Contact Us Page Functionality</p>
+              <p> Content Page Amends</p>
             </div>
             <div class="s-link">
               <a href="#"><i class="fa fa-facebook"></i></a>
