--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ body {
     top: 0%;
     width: 100%;
     opacity: 0;
-    -webkit-transform: translateY(-55%);
-    -ms-transform: translateY(-55%);
-    transform: translateY(-55%);
+    -webkit-transform: translateY(-25%);
+    -ms-transform: translateY(-25%);
+    transform: translateY(-25%);
     -webkit-transition: all 0.3s 0.2s;
     transition: all 0.3s 0.2s;
     padding: 0 20px;
@@ -271,7 +271,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Louise Inskip - 01302 572980</h5>
+            <h5>Louise Inskip - 01302 332980</h5>
             <span>International Web Coordinator</span>
           </div>
         </div>
@@ -283,7 +283,12 @@ body {
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                <p>Website Checks</p>
+                <p>Trading & Campaign Support</p>
+                <p>Lister Sequencing</p>
+                <p>Optimising Internal Search Terms</p>
+                <p>Analytics Insight</p>
+                <p>A/B Testing</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -293,8 +298,8 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Jas Lall - 01302 572958</h5>
-            <span>Online Analyst</span>
+            <h5>Jas Lall - 01302 573764</h5>
+            <span>Online Optimisation & Analytics</span>
           </div>
         </div>
       </div>
@@ -393,7 +398,7 @@ body {
           </div>
           <div class="team-title">
             <h5>Linzi Jenkins - 01302 573991</h5>
-            <span>Online Studio Manager</span>
+            <span>Online Design & CX Manager</span>
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
