--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/jill_lake.jpg" alt="team member" class="img-responsive">
+              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/jill_lake.jpg?raw=true" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
