--- a/index.html
+++ b/index.html
@@ -242,7 +242,10 @@ body {
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                <p>1st line Web Support</p>
+                <p>Daily Operational Tasks</p>
+                <p>General Web Queries</p>
+                <p>Online Testing</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -314,7 +317,13 @@ body {
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                <p>Product Loader Queries</p>
+                <p>Product Details on site<p/>
+                <p>Digital Price Book</p>
+                <p>Marketing Messaging</p>
+                <p>Flashes on listers</p>
+                <p>Ecom Products Queries</p>
+                <p>Not Order queries, direct these to Websales</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -331,12 +340,18 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/jill_lake.jpg?raw=true" alt="team member" class="img-responsive">
+              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18664705_117793128801246_1341798959795893392_n.jpg?_nc_cat=106&_nc_ht=scontent-lhr3-1.xx&oh=fb39eb0fd40c3a983686fd720b0f3d83&oe=5CA905CA" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
                 <h4> Here's what I do - </h4>
-                <p></p>
+                  <p>Product Loader Queries</p>
+                  <p>Product Details on site<p/>
+                  <p>Digital Price Book</p>
+                  <p>Marketing Messaging</p>
+                  <p>Flashes on listers</p>
+                  <p>Ecom Products Queries</p>
+                  <p>Not Order queries, direct these to Websales</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -346,7 +361,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Jill Lake</h5>
+            <h5>Jill Lake - 01302 573390</h5>
             <span>Online Product Manager</span>
           </div>
         </div>
@@ -458,7 +473,13 @@ body {
               <div class="team-hover">
                 <div class="desk">
                   <h4> Here's what I do - </h4>
-                  <p></p>
+                  <p>Product Loader Queries</p>
+                  <p>Product Details on site<p/>
+                  <p>Digital Price Book</p>
+                  <p>Marketing Messaging</p>
+                  <p>Flashes on listers</p>
+                  <p>Ecom Products Queries</p>
+                  <p>Not Order queries, direct these to Websales</p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -468,7 +489,7 @@ body {
               </div>
             </div>
             <div class="team-title">
-              <h5>Amy Howells</h5>
+              <h5>Amy Howells - 01302 332915</h5>
               <span>Online Content Co-Ordinator</span>
             </div>
           </div>
@@ -555,7 +576,9 @@ body {
               <div class="team-hover">
                 <div class="desk">
                   <h4> Here's what I do - </h4>
-                  <p></p>
+                  <p>Big Boss Man</p>
+                  <p>Make Tea & Coffee</p>
+                  <p>Crack the Whip</p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
