--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18664705_117793128801246_1341798959795893392_n.jpg?_nc_cat=106&_nc_ht=scontent-lhr3-1.xx&oh=fb39eb0fd40c3a983686fd720b0f3d83&oe=5CA905CA" alt="team member" class="img-responsive">
+              <img src="https://github.com/AlexProven/OnlineTeam/jill_lake.jpg" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
