--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://github.com/AlexProven/OnlineTeam/jill_lake.jpg" alt="team member" class="img-responsive">
+              <img src="https://alexproven.github.io/OnlineTeam/jill_lake.jpg" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
