--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/19030427_130078440903457_5672285032213512557_n.jpg?_nc_cat=107&_nc_ht=scontent-lhr3-1.xx&oh=42f3741ac2642dd095d7f37e702809c8&oe=5C6D798D" alt="team member" class="img-responsive">
+              <img src="https://alexproven.github.io/OnlineTeam/wayne_machan.jpg" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
@@ -392,7 +392,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18486143_108602703054255_3799797320292711366_n.jpg?_nc_cat=103&_nc_ht=scontent-lhr3-1.xx&oh=542e11b0fc038b8e0c3e07de1c13a679&oe=5C7F6DEA" alt="team member" class="img-responsive">
+              <img src="https://alexproven.github.io/OnlineTeam/linzi_jenkins.jpg" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
@@ -419,7 +419,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/45523861_336071870308709_5458852108356812800_n.jpg?_nc_cat=106&_nc_ht=scontent-lhr3-1.xx&oh=a33be3415b731da0ff12b9a7f068a2db&oe=5CB16F82" alt="team member" class="img-responsive">
+              <img src="https://alexproven.github.io/OnlineTeam/nicole_winder.jpg" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
