--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@ body {
       <div class="heading-title text-center">
         <h3 class="text-uppercase">Meet The Online Team </h3>
         <p class="p-top-30 half-txt">The online team maintain and manage the DFS website - Hover over our pictures to find out what each of us do! </p>
-        <p class="p-top-30 half-txt">PLEASE NOTE - We handle pricing on the website only (Retail/Order Build pricing queries should be directed to Stock & Price)</p>
       </div>
 
       <div class="col-md-4 col-sm-4">
@@ -325,6 +324,8 @@ body {
                 <p>Flashes on listers</p>
                 <p>Ecom Products Queries</p>
                 <p>Not Order queries, direct these to Websales</p>
+                <p>**PLEASE NOTE - We handle pricing on the website only</p>
+                <p>(Retail/Order Build pricing queries should be directed to Stock & Price)**</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -353,6 +354,8 @@ body {
                   <p>Flashes on listers</p>
                   <p>Ecom Products Queries</p>
                   <p>Not Order queries, direct these to Websales</p>
+                  <p>**PLEASE NOTE - We handle pricing on the website only</p>
+                  <p>(Retail/Order Build pricing queries should be directed to Stock & Price)**</p>
               </div>
               <div class="s-link">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -481,6 +484,8 @@ body {
                   <p>Flashes on listers</p>
                   <p>Ecom Products Queries</p>
                   <p>Not Order queries, direct these to Websales</p>
+                  <p>**PLEASE NOTE - We handle pricing on the website only</p>
+                  <p>(Retail/Order Build pricing queries should be directed to Stock & Price)**</p>
                 </div>
                 <div class="s-link">
                   <a href="#"><i class="fa fa-facebook"></i></a>
