--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ body {
           <div class="col-md-4 col-sm-4">
             <div class="team-member">
               <div class="team-img">
-                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-1/30420222_10150025585994535_1220887860103079987_o.png?_nc_cat=1&_nc_ht=scontent-lhr3-1.xx&oh=0490766bd531ca70802dd13b5321f2dc&oe=5C6C9A7F" alt="team member" class="img-responsive">
+                <img src="https://alexproven.github.io/OnlineTeam/claire_lee.jpg" alt="team member" class="img-responsive">
               </div>
               <div class="team-hover">
                 <div class="desk">
