--- a/index.html
+++ b/index.html
@@ -216,12 +216,13 @@ body {
           <div class="team-hover">
             <div class="desk">
               <h4> Here's what I do - </h4>
+              <p>Lead in Digital Projects</p>
+              <p>Web Coding</p>
               <p>Maintain & Improve the Website</p>
               <p>Tech upgrades & Implementation</p>
               <p>Technical Investigation</p>
-              <p>Web Coding</p>
+              <p>Lead in Online Busines Ops</p>
               <p>Incident Investigation</p>
-              <p>Lead in Digital Projects</p>
             </div>
           </div>
         </div>
