--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/l/t1.0-9/17155945_108556289731597_2638280059266633059_n.jpg?_nc_cat=101&_nc_ht=scontent-lhr3-1.xx&oh=6e6558dae210b23bccc13d947c4f17d2&oe=5C6AAB79" alt="team member" class="img-responsive">
+              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/l/t1.0-9/17155945_108556289731597_2638280059266633059_n.jpg?_nc_cat=101&_nc_ht=scontent-lhr3-1.xx&oh=bf4d466500453ae1b1b6eefd8e07767c&oe=5CE15279">
             </div>
             <div class="team-hover">
               <div class="desk">
@@ -449,7 +449,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18485557_106562469925517_1551952022619582279_n.jpg?_nc_cat=108&_nc_ht=scontent-lhr3-1.xx&oh=b2a976b589600e21223b22dfddf960e2&oe=5C6E6B3C" alt="team member" class="img-responsive">
+              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18485557_106562469925517_1551952022619582279_n.jpg?_nc_cat=108&_nc_ht=scontent-lhr3-1.xx&oh=234d7f87fea2091cf60818a063f461c7&oe=5CE5123C" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
