--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body {
       <div class="col-md-4 col-sm-4">
         <div class="team-member">
           <div class="team-img">
-            <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/18422573_105377230041535_2848060869872909352_o.jpg?_nc_cat=111&_nc_ht=scontent-lhr3-1.xx&oh=e09df3108cd8f911ac7efec8ff43517d&oe=5CAD6CA6" alt="team member" class="img-responsive">
+            <img src="https://github.com/AlexProven/OnlineTeam/blob/master/paul.jpg?raw=true" alt="team member" class="img-responsive">
           </div>
           <div class="team-hover">
             <div class="desk">
