--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ body {
       <div class="col-md-4 col-sm-4">
         <div class="team-member">
           <div class="team-img">
-            <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18486217_115557642354869_9149815828883234737_n.jpg?_nc_cat=108&_nc_ht=scontent-lhr3-1.xx&oh=ffca4a8284ce41fb121916ba63344cf6&oe=5CE37218" class="img-responsive">
+            <img src="https://github.com/AlexProven/OnlineTeam/blob/master/manisha.jpg?raw=true" class="img-responsive">
             </div>
           <div class="team-hover">
             <div class="desk">
@@ -211,7 +211,7 @@ body {
       <div class="col-md-4 col-sm-4">
         <div class="team-member">
           <div class="team-img">
-            <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/37914041_114240169507063_5058934539351490560_o.jpg?_nc_cat=100&_nc_ht=scontent-lhr3-1.xx&oh=99c7cd3718db0522be97ad5ed67f8657&oe=5CAB8402" class="img-responsive">
+            <img src="https://github.com/AlexProven/OnlineTeam/blob/master/alex.jpg?raw=true" class="img-responsive">
           </div>
           <div class="team-hover">
             <div class="desk">
@@ -228,7 +228,7 @@ body {
         </div>
         <div class="team-title">
           <h5>Alex Proven - 01302 573790</h5>
-          <span>Web Ops Executive</span>
+          <span>Digital Delivery Executive</span>
         </div>
       </div>
     </div>
@@ -263,7 +263,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/42696861_310128076237982_3195833432072519680_o.jpg?_nc_cat=105&_nc_ht=scontent-lhr3-1.xx&oh=81146bcd79875d717da0513237b2dfff&oe=5C802AF7" alt="team member" class="img-responsive">
+              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/louise.jpg?raw=true" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
@@ -275,7 +275,7 @@ body {
             </div>
           </div>
           <div class="team-title">
-            <h5>Louise Inskip - 01302 332980</h5>
+            <h5>Louise Brown - 01302 332980</h5>
             <span>International Web Coordinator</span>
           </div>
         </div>
@@ -313,7 +313,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/l/t1.0-9/17155945_108556289731597_2638280059266633059_n.jpg?_nc_cat=101&_nc_ht=scontent-lhr3-1.xx&oh=bf4d466500453ae1b1b6eefd8e07767c&oe=5CE15279">
+              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/heather.jpg?raw=true" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
@@ -371,7 +371,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18485741_113211019257408_8151797575601998625_n.jpg?_nc_cat=102&_nc_ht=scontent-lhr3-1.xx&oh=ae9c9d9440e1a009e0f1ae33c9a854af&oe=5C805995" alt="team member" class="img-responsive">
+              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/simon.jpg?raw=true" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
@@ -449,7 +449,7 @@ body {
         <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18485557_106562469925517_1551952022619582279_n.jpg?_nc_cat=108&_nc_ht=scontent-lhr3-1.xx&oh=234d7f87fea2091cf60818a063f461c7&oe=5CE5123C" alt="team member" class="img-responsive">
+              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/erica.jpg?raw=true" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
@@ -500,7 +500,7 @@ body {
           <div class="col-md-4 col-sm-4">
             <div class="team-member">
               <div class="team-img">
-                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/18518030_105770603338602_2765223850439077202_o.jpg?_nc_cat=110&_nc_ht=scontent-lhr3-1.xx&oh=59f466b663c19f5e41497ec2799ca801&oe=5C7251BD" alt="team member" class="img-responsive">
+                <img src="https://github.com/AlexProven/OnlineTeam/blob/master/ella_davies.jpg?raw=true" alt="team member" class="img-responsive">
               </div>
               <div class="team-hover">
                 <div class="desk">
@@ -550,7 +550,7 @@ body {
           <div class="col-md-4 col-sm-4">
             <div class="team-member">
               <div class="team-img">
-                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/21617596_158022734783682_6999140066519161637_n.jpg?_nc_cat=101&_nc_ht=scontent-lhr3-1.xx&oh=a461f07379966d452c13e75cd235ce0f&oe=5C7EBE82" alt="team member" class="img-responsive">
+                <img src="https://github.com/AlexProven/OnlineTeam/blob/master/alex_parkin.jpg?raw=true" alt="team member" class="img-responsive">
               </div>
               <div class="team-hover">
                 <div class="desk">
@@ -575,7 +575,7 @@ body {
           <div class="col-md-4 col-sm-4">
             <div class="team-member">
               <div class="team-img">
-                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-1/21731597_10150009420698562_9065937724788420418_o.png?_nc_cat=1&_nc_ht=scontent-lhr3-1.xx&oh=7cf53251d4ed42673d0ac2c88d28e173&oe=5C6FC19D" alt="team member" class="img-responsive">
+                <img src="https://github.com/AlexProven/OnlineTeam/blob/master/James_Vernon.jpg?raw=true" alt="team member" class="img-responsive">
               </div>
               <div class="team-hover">
                 <div class="desk">
