--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ body {
           <div class="col-md-4 col-sm-4">
             <div class="team-member">
               <div class="team-img">
-                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-1/21740873_10150009420696834_3120795911644946260_o.png?_nc_cat=1&_nc_ht=scontent-lhr3-1.xx&oh=d0f95f6cb0e87abf529e6f2489a1e406&oe=5CAA9B70" alt="team member" class="img-responsive">
+                <img src="https://github.com/AlexProven/OnlineTeam/blob/master/no_user_photo.jpg?raw=true" alt="team member" class="img-responsive">
               </div>
               <div class="team-hover">
                 <div class="desk">
@@ -527,7 +527,7 @@ body {
           <div class="col-md-4 col-sm-4">
             <div class="team-member">
               <div class="team-img">
-                <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/18447399_100139317238460_1921259006135348909_n.jpg?_nc_cat=109&_nc_ht=scontent-lhr3-1.xx&oh=3e0e02713fe74a91fda77a0a72194712&oe=5C7152A2" alt="team member" class="img-responsive">
+                <img src="https://github.com/AlexProven/OnlineTeam/blob/master/no_user_photo.jpg?raw=true" alt="team member" class="img-responsive">
               </div>
               <div class="team-hover">
                 <div class="desk">
