--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ body {
     <div class="col-md-4 col-sm-4">
           <div class="team-member">
             <div class="team-img">
-              <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/19145734_124725488110447_6679966365789266654_n.jpg?_nc_cat=100&_nc_ht=scontent-lhr3-1.xx&oh=d701c97ddec71220770e9c2a3ca4b641&oe=5D15502D" alt="team member" class="img-responsive">
+              <img src="https://github.com/AlexProven/OnlineTeam/blob/master/jas.jpg?raw=true" alt="team member" class="img-responsive">
             </div>
             <div class="team-hover">
               <div class="desk">
