--- a/index.html
+++ b/index.html
@@ -217,18 +217,18 @@ body {
             <div class="desk">
               <h4> Here's what I do - </h4>
               <p>Lead in Digital Projects</p>
-              <p>Web Coding</p>
+              <p>Lead in Online Busines Operations</p>
+              <p>Senior Developer</p>
               <p>Maintain & Improve the Website</p>
               <p>Tech upgrades & Implementation</p>
               <p>Technical Investigation</p>
-              <p>Lead in Online Busines Ops</p>
               <p>Incident Investigation</p>
             </div>
           </div>
         </div>
         <div class="team-title">
           <h5>Alex Proven - 01302 573790</h5>
-          <span>Digital Delivery Executive</span>
+          <span>Executive of Digital Delivery</span>
         </div>
       </div>
     </div>
