--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ body {
             <div class="desk">
               <h4> Here's what I do - </h4>
               <p>Lead in Digital Projects</p>
-              <p>Lead in Online Busines Operations</p>
-              <p>Senior Developer</p>
+              <p>Online Business Operations</p>
+              <p>Requirement and Specifications</p>
               <p>Maintain & Improve the Website</p>
               <p>Tech upgrades & Implementation</p>
               <p>Technical Investigation</p>
@@ -228,7 +228,7 @@ body {
         </div>
         <div class="team-title">
           <h5>Alex Proven - 01302 573790</h5>
-          <span>Executive of Digital Delivery</span>
+          <span>Digital Delivery Executive</span>
         </div>
       </div>
     </div>
